--- a/UserApplication/Views/Shared/_Layout.cshtml
+++ b/UserApplication/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using System.Security.Claims
+@{
+    string userId = User.Claims
+            .FirstOrDefault(x => x.Type == ClaimTypes.NameIdentifier).Value;
+}
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -22,9 +27,19 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        @if (User.Claims.FirstOrDefault(x => x.Type == ClaimTypes.Role).Value == "admin")
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            </li>
+                        }
+                        <li class="nav-item mt-2" style="margin-left:1250px;">
+                            <a asp-action="details" asp-controller="authentication"><span>@User.Claims.FirstOrDefault(x => x.Type == ClaimTypes.Name).Value</span></a>
                         </li>
+                        <li class="mt-2" style="margin-left:25px;">
+                            <a asp-controller="Authentication" asp-action="Logout" class="btn btn-sm btn-danger">Çıkış Yap</a>
+                        </li>
+                        
                     </ul>
                 </div>
             </div>
